<resources>
    <string name="app_name">Sharebt</string>
    <string name="facebook_app_id">1858369014442314</string>
    <string name="web_client_google_id">627844066136-gnbcthg2f2l0ehlqq5uf84c5al22l2ev.apps.googleusercontent.com</string>

    <string name="home">Home</string>
    <string name="add_new">New</string>
    <string name="stats">Stats</string>
    <string name="users">Users</string>

    <string name="save">Add</string>
    <string name="debt">Debt</string>
    <string name="name">Name</string>
    <string name="value">Value</string>

    <string name="all_debts">All debts</string>
    <string name="plus_debts">My debtors</string>
    <string name="minus_debts">My obligation</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register!</string>
    <string name="btn_link_to_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="action_logout"> Log Out</string>
</resources>
