<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_36dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:title="@string/add_new"
        android:icon="@drawable/ic_add_box_black_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stats"
        android:enabled="true"
        android:icon="@drawable/ic_insert_chart_black_36dp"
        android:title="@string/stats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_users"
        android:enabled="true"
        android:icon="@drawable/ic_insert_chart_black_36dp"
        android:title="@string/users"
        app:showAsAction="ifRoom" />

</menu>