<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_fragment_debt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:lines="2"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/add_fragment_debt_switch"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/debt"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:text="@string/value"
                android:gravity="right"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_fragment_debt_value"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"

                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/add_fragment_debt_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/save"
            android:theme="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_entry"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>