<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="3"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:textSize="@dimen/stats_text_size"
            android:text="@string/all_debts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stats_fragment_all_debts"
            android:textSize="@dimen/stats_text_size"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="0dp"
            android:text="@string/plus_debts"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stats_fragment_plus_debts"
            android:layout_weight="1"
            android:textSize="@dimen/stats_text_size"
            android:textColor="@color/green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="3"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="@dimen/stats_text_size"
            android:text="@string/minus_debts"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/stats_fragment_minus_debts"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:textSize="@dimen/stats_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/stats_fragment_pie_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>